--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 </head>
 
 <body class="text-align: center">
-  <div class="network-loading" style="font-family: Helvetica, Roboto, sans-serif; color: #1c2022; font-size: 16px; margin: auto; max-width: 100%; width: 500px; padding: 40px">Initializing 1,526,438 network parameters (This may take a minute)</div>
+  <div class="network-loading" style="font-family: Helvetica, Roboto, sans-serif; color: #1c2022; font-size: 16px; margin: auto; max-width: 100%; width: 500px;">
+    <div style="padding: 40px">Initializing 1,526,438 network parameters (This may take a minute)</div>
+  </div>
   <div class="rapper" style="display: none; margin: auto; max-width: 100%; width: 500px">
     <div id="tweet-container" data-twitter-event-id="0" class="SandboxRoot env-bp-350" style="position: relative;">
       <div class="next-tweet EmbeddedTweet js-clickToOpenTarget tweet-InformationCircle-widgetParent" data-click-to-open-target="https://twitter.com/realDonaldTrump/status/258584864163500033"
