--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a class="TweetAuthor-link Identity u-linkBlend" data-scribe="element:user_link" href="https://twitter.com/realDonaldTrump"
                   aria-label="Donald J. Trump (screen name: realDonaldTrump)">
                   <span class="TweetAuthor-avatar Identity-avatar">
-      <img class="Avatar" data-scribe="element:avatar" data-src-2x="https://pbs.twimg.com/profile_images/1980294624/DJT_Headshot_V2_bigger.jpg" alt="" data-src-1x="https://pbs.twimg.com/profile_images/1980294624/DJT_Headshot_V2_normal.jpg" src="https://pbs.twimg.com/profile_images/1980294624/DJT_Headshot_V2_bigger.jpg">
+      <img class="Avatar" data-scribe="element:avatar" data-src-2x="https://pbs.twimg.com/profile_images/874276197357596672/kUuht00m_400x400.jpg" alt="" data-src-1x="https://pbs.twimg.com/profile_images/874276197357596672/kUuht00m_400x400.jpg" src="https://pbs.twimg.com/profile_images/874276197357596672/kUuht00m_400x400.jpg" />
     </span>
                   <span class="TweetAuthor-name Identity-name customisable-highlight" title="Donald J. Trump" data-scribe="element:name">Donald J. Trump</span>
                   <span class="TweetAuthor-verifiedBadge" data-scribe="element:verified_badge"><div class="Icon Icon--verified " aria-label="Verified Account" title="Verified Account" role="img"></div><b class="u-hiddenVisually">✔</b></span>
